test automatic & registration